--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.7.1</version>
         <relativePath/>
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>ShareIt</artifactId>
+    <groupId>ru.practicum</groupId>
+    <artifactId>shareit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ShareIt</name>
-    <description>ShareIt</description>
+    <name>shareit</name>
+    <description>shareit</description>
     <properties>
         <java.version>11</java.version>
     </properties>
@@ -46,10 +46,6 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore-nio</artifactId>
             <version>4.4.15</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
