--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.sql.init.mode=always
 ?
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareIt
-spring.datasource.username=basatt
-spring.datasource.password=basatt
+spring.datasource.url=jdbc:postgresql://localhost:5434/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
 spring.datasource.password=test
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
